--- a/C00/ex00/Makefile
+++ b/C00/ex00/Makefile
@@ -3,11 +3,34 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: pracksaw <pracksaw@student.42bangkok.com>  +#+  +:+       +#+         #
+#    By: pracksaw <pracksaw@student.42bangkok.co    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/21 18:08:58 by pracksaw          #+#    #+#              #
-#    Updated: 2025/02/21 18:08:58 by pracksaw         ###   ########.fr        #
+#    Updated: 2025/03/05 21:46:41 by pracksaw         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
+CXX = c++
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+NAME = megaphone
 
+SRCS = megaphone.cpp
+OBJS = $(SRCS:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
+
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+clean:
+	rm -f $(OBJS)
+
+fclean: clean
+	rm -f $(NAME)
+
+re: fclean all
+
+.PHONY: all clean fclean re
