--- a/C00/ex02/Makefile
+++ b/C00/ex02/Makefile
@@ -10,4 +10,27 @@
 #                                                                              #
 # **************************************************************************** #
 
+CPP = clang++
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+NAME = tests
+SRCS = account.cpp  account.hpp  Account.hpp
+OBJS = $(SRCS:.cpp=.o)
+
+all: $(NAME)
+
+$(NAME): $(OBJS)
+	$(CPP) $(CPPFLAGS) -o $(NAME) $(OBJS)
+
+%.o: %.cpp
+	$(CPP) $(CPPFLAGS) -c $< -o $@
+
+clean:
+	rm -f $(OBJS)
+
+fclean: clean
+	rm -f $(NAME)
+
+re: fclean all
+
+.PHONY: all clean fclean re
 
