fixing Makefile for CPP00

--- a/C00/ex00/Makefile
+++ b/C00/ex00/Makefile
@@ -10,8 +10,8 @@
 #                                                                              #
 # **************************************************************************** #
 
-CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CPP = clang++
+CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = megaphone
 
 SRCS = megaphone.cpp
@@ -20,10 +20,9 @@ OBJS = $(SRCS:.cpp=.o)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
 %.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(CPP) $(CPPFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
