rm contact cpp hpp

--- a/C00/ex01/Makefile
+++ b/C00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: pracksaw <pracksaw@student.42bangkok.co    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/21 18:16:33 by pracksaw          #+#    #+#              #
-#    Updated: 2025/03/12 21:47:18 by pracksaw         ###   ########.fr        #
+#    Updated: 2025/03/13 19:26:03 by pracksaw         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,8 +21,8 @@ NAME                    =       phonebook
 
 #==============================================================================#
 ## FILES 📄
-SRC_FILES               =       contact.cpp phonebook.cpp
-HDR_FILES               =       contact.hpp phonebook.hpp colors.hpp
+SRC_FILES               =       phonebook.cpp
+HDR_FILES               =       phonebook.hpp colors.hpp
 OBJ_FILES               =       $(SRC_FILES:.cpp=.o)
 
 #==============================================================================#
