Last Makefile updated (Change from echo to printf && rm debug)

--- a/C00/ex01/Makefile
+++ b/C00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: pracksaw <pracksaw@student.42bangkok.co    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/21 18:16:33 by pracksaw          #+#    #+#              #
-#    Updated: 2025/03/13 19:30:56 by pracksaw         ###   ########.fr        #
+#    Updated: 2025/03/27 19:02:53 by pracksaw         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -43,12 +43,12 @@ NC                      =       \033[0m
 #==============================================================================#
 ## RULES 🔨
 all:                            $(NAME)
-				@echo "$(GREEN)🎉 PhoneBook has been successfully compiled! 🎉$(NC)"
+				@printf "$(GREEN)🎉 PhoneBook has been successfully compiled! 🎉$(NC)\n"
 
 $(NAME):                        $(OBJ_FILES)
-				@echo "$(YELLOW)🔗 Linking objects into executable...$(NC)"
+				@printf "$(YELLOW)🔗 Linking objects into executable...$(NC)\n"
 				@$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJ_FILES)
-				@echo "$(GREEN)✅ Executable $(NAME) created! 📞$(NC)"
+				@printf "$(GREEN)✅ Executable $(NAME) created! 📞$(NC)\n"
 
 %.o: %.cpp %.hpp
 				@$(eval COMPILED_FILES=$(shell echo $$(($(COMPILED_FILES) + 1))))
@@ -57,29 +57,29 @@ $(NAME):                        $(OBJ_FILES)
 				@if [ $(COMPILED_FILES) -eq $(TOTAL_FILES) ]; then echo; fi
 
 phonebook.o: phonebook.cpp phonebook.hpp
-				@echo "$(CYAN)🔄 Compiling: phonebook.cpp$(NC)"
+				@printf "$(CYAN)🔄 Compiling: phonebook.cpp$(NC)\n"
 				@$(CXX) $(CXXFLAGS) -c phonebook.cpp -o phonebook.o
 
 clean:
-				@echo "$(YELLOW)🧹 Cleaning object files...$(NC)"
+				@printf "$(YELLOW)🧹 Cleaning object files...$(NC)\n"
 				@rm -f $(OBJ_FILES)
-				@echo "$(GREEN)✨ Object files cleaned!$(NC)"
+				@printf "$(GREEN)✨ Object files cleaned!$(NC)\n"
 
 fclean:                         clean
-				@echo "$(YELLOW)🗑️  Cleaning $(NAME) executable...$(NC)"
+				@printf "$(YELLOW)🗑️  Cleaning $(NAME) executable...$(NC)\n"
 				@rm -f $(NAME)
-				@echo "$(GREEN)🧼 All cleaned up!$(NC)"
+				@printf "$(GREEN)🧼 All cleaned up!$(NC)\n"
 
 re:                             fclean all
-				@echo "$(PURPLE)🔄 Project rebuilt from scratch! 🔄$(NC)"
+				@printf "$(PURPLE)🔄 Project rebuilt from scratch! 🔄$(NC)\n"
 
 #==============================================================================#
 .PHONY:                         all clean fclean re help
 
 help:
-				@echo "$(CYAN)📚 Available targets:$(NC)"
-				@echo "$(GREEN)  make$(NC)        - Build the phonebook program"
-				@echo "$(GREEN)  make clean$(NC)  - Remove object files"
-				@echo "$(GREEN)  make fclean$(NC) - Remove object files and executable"
-				@echo "$(GREEN)  make re$(NC)     - Rebuild from scratch"
-				@echo "$(GREEN)  make help$(NC)   - Display this help message"
+				@printf "$(CYAN)📚 Available targets:$(NC)\n"
+				@printf "$(GREEN)  make$(NC)        - Build the phonebook program\n"
+				@printf "$(GREEN)  make clean$(NC)  - Remove object files\n"
+				@printf "$(GREEN)  make fclean$(NC) - Remove object files and executable\n"
+				@printf "$(GREEN)  make re$(NC)     - Rebuild from scratch\n"
+				@printf "$(GREEN)  make help$(NC)   - Display this help message\n"
